docs/0.8.0/_sources/api/gwpy.table.Table.rst.txt


Table
================

.. currentmodule:: gwpy.table

.. autoclass:: Table
   :no-inherited-members:

   
     None
   

   
   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~Table.add_column
      ~Table.add_columns
      ~Table.add_index
      ~Table.add_row
      ~Table.argsort
      ~Table.as_array
      ~Table.convert_bytestring_to_unicode
      ~Table.convert_unicode_to_bytestring
      ~Table.copy
      ~Table.field
      ~Table.filled
      ~Table.from_pandas
      ~Table.group_by
      ~Table.index_column
      ~Table.index_mode
      ~Table.insert_row
      ~Table.itercols
      ~Table.keep_columns
      ~Table.keys
      ~Table.more
      ~Table.pformat
      ~Table.pprint
      ~Table.read
      ~Table.remove_column
      ~Table.remove_columns
      ~Table.remove_indices
      ~Table.remove_row
      ~Table.remove_rows
      ~Table.rename_column
      ~Table.replace_column
      ~Table.reverse
      ~Table.show_in_browser
      ~Table.show_in_notebook
      ~Table.sort
      ~Table.to_pandas
      ~Table.write

   
   

   
   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: add_column
   .. automethod:: add_columns
   .. automethod:: add_index
   .. automethod:: add_row
   .. automethod:: argsort
   .. automethod:: as_array
   .. automethod:: convert_bytestring_to_unicode
   .. automethod:: convert_unicode_to_bytestring
   .. automethod:: copy
   .. automethod:: field
   .. automethod:: filled
   .. automethod:: from_pandas
   .. automethod:: group_by
   .. automethod:: index_column
   .. automethod:: index_mode
   .. automethod:: insert_row
   .. automethod:: itercols
   .. automethod:: keep_columns
   .. automethod:: keys
   .. automethod:: more
   .. automethod:: pformat
   .. automethod:: pprint
   .. automethod:: read
   .. automethod:: remove_column
   .. automethod:: remove_columns
   .. automethod:: remove_indices
   .. automethod:: remove_row
   .. automethod:: remove_rows
   .. automethod:: rename_column
   .. automethod:: replace_column
   .. automethod:: reverse
   .. automethod:: show_in_browser
   .. automethod:: show_in_notebook
   .. automethod:: sort
   .. automethod:: to_pandas
   .. automethod:: write

   
   