docs/2.0.4/_sources/api/gwpy.table.Table.rst.txt


Table
================

.. currentmodule:: gwpy.table

.. autoclass:: Table
   :no-inherited-members:

   
     None
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~Table.ColumnClass
      ~Table.colnames
      ~Table.dtype
      ~Table.groups
      ~Table.has_masked_columns
      ~Table.has_masked_values
      ~Table.has_mixin_columns
      ~Table.iloc
      ~Table.indices
      ~Table.info
      ~Table.loc
      ~Table.loc_indices
      ~Table.mask
      ~Table.masked
      ~Table.meta
      ~Table.read
      ~Table.write

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~Table.add_column
      ~Table.add_columns
      ~Table.add_index
      ~Table.add_row
      ~Table.argsort
      ~Table.as_array
      ~Table.convert_bytestring_to_unicode
      ~Table.convert_unicode_to_bytestring
      ~Table.copy
      ~Table.field
      ~Table.filled
      ~Table.from_pandas
      ~Table.group_by
      ~Table.index_column
      ~Table.index_mode
      ~Table.insert_row
      ~Table.items
      ~Table.itercols
      ~Table.iterrows
      ~Table.keep_columns
      ~Table.keys
      ~Table.more
      ~Table.pformat
      ~Table.pformat_all
      ~Table.pprint
      ~Table.pprint_all
      ~Table.remove_column
      ~Table.remove_columns
      ~Table.remove_indices
      ~Table.remove_row
      ~Table.remove_rows
      ~Table.rename_column
      ~Table.rename_columns
      ~Table.replace_column
      ~Table.reverse
      ~Table.round
      ~Table.show_in_browser
      ~Table.show_in_notebook
      ~Table.sort
      ~Table.to_pandas
      ~Table.values
      ~Table.values_equal

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: ColumnClass
   .. autoattribute:: colnames
   .. autoattribute:: dtype
   .. autoattribute:: groups
   .. autoattribute:: has_masked_columns
   .. autoattribute:: has_masked_values
   .. autoattribute:: has_mixin_columns
   .. autoattribute:: iloc
   .. autoattribute:: indices
   .. autoattribute:: info
   .. autoattribute:: loc
   .. autoattribute:: loc_indices
   .. autoattribute:: mask
   .. autoattribute:: masked
   .. autoattribute:: meta
   .. autoattribute:: read
   .. autoattribute:: write

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: add_column
   .. automethod:: add_columns
   .. automethod:: add_index
   .. automethod:: add_row
   .. automethod:: argsort
   .. automethod:: as_array
   .. automethod:: convert_bytestring_to_unicode
   .. automethod:: convert_unicode_to_bytestring
   .. automethod:: copy
   .. automethod:: field
   .. automethod:: filled
   .. automethod:: from_pandas
   .. automethod:: group_by
   .. automethod:: index_column
   .. automethod:: index_mode
   .. automethod:: insert_row
   .. automethod:: items
   .. automethod:: itercols
   .. automethod:: iterrows
   .. automethod:: keep_columns
   .. automethod:: keys
   .. automethod:: more
   .. automethod:: pformat
   .. automethod:: pformat_all
   .. automethod:: pprint
   .. automethod:: pprint_all
   .. automethod:: remove_column
   .. automethod:: remove_columns
   .. automethod:: remove_indices
   .. automethod:: remove_row
   .. automethod:: remove_rows
   .. automethod:: rename_column
   .. automethod:: rename_columns
   .. automethod:: replace_column
   .. automethod:: reverse
   .. automethod:: round
   .. automethod:: show_in_browser
   .. automethod:: show_in_notebook
   .. automethod:: sort
   .. automethod:: to_pandas
   .. automethod:: values
   .. automethod:: values_equal

   
   